Fix overflow container

--- a/style.css
+++ b/style.css
@@ -279,6 +279,8 @@ main {
 .tasks {
     grid-column: 2;
     grid-row: 2;
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 .tasks > h1 {
@@ -289,12 +291,14 @@ main {
 
 .current-task {
     width: 100%;
-    height: 400px;
+    height: auto;
+    min-height: 400px;
     border-radius: 10px;
     padding: 10px;
     font-size: var(--font-size-base);
     background-color: white;
     line-height: 2;
+    overflow-y: auto;
 }
 
 .container {
